addded footer link component and dark shade to hero and changed a bunch of stuff in theme

--- a/src/gatsby-plugin-theme-ui/Font.css
+++ b/src/gatsby-plugin-theme-ui/Font.css
@@ -1,6 +1,5 @@
 @font-face {
     font-family: Pristina;
-src: local("Pristina-Regular"),
-local("Pristina"),
-url(pristina.ttf);
+    src: local("Pristina-Regular"), local("Pristina"), url(pristina.ttf);
+    font-display: swap;
 }
