--- a/src/gatsby-plugin-theme-ui/Font.css
+++ b/src/gatsby-plugin-theme-ui/Font.css
@@ -1,5 +1,5 @@
 @font-face {
     font-family: Pristina;
     src: local("Pristina-Regular"), local("Pristina"), url(pristina.ttf);
-    font-display: swap;
+    font-display: optional;
 }
